fix testes and improve swagger
